...
    
    List<Result> results = [];

    // run each insert in sequential order to ensure correct dependency heirarchy
    if (sections.contains('Site Information')) {
      // all required fields at this point must exist
      final String borden = inputs['Site Information-Borden']!;
      final String? name = inputs['Site Information-Name'];

      _logger?.info("Save - Inserting Site");
      results.add(await usecases.insertSiteUsecase(borden: borden, name: name));
      
      final String area = inputs['Site Information-Area']!;
      
      _logger?.info("Save - Inserting Area");
      results.add(await usecases.insertAreaUsecase(name: area));
    }


    if (sections.contains('Unit')) {
      final String name = inputs['Unit-Name']!;
      final String siteName = inputs['Unit-Site Name']!;

      _logger?.info("Save - Inserting Unit");
      results.add(await usecases.insertUnitUsecase(siteName: siteName, name: name));
    }


    if (sections.contains('Level')) {
      final String name = inputs['Level-Name']!;
      final String unitName = inputs['Level-Unit Name']!;
      final String? parentName = inputs['Level-Parent Name'];
      // this syntax gets the result as an int if exists, null otherwise
      final int? upperLimit = int.tryParse(inputs['Level-Upper Limit'] ?? '');
      final int? lowerLimit = int.tryParse(inputs['Level-Lower Limit'] ?? '');
    
      _logger?.info("Save - Inserting Level");
      results.add(await usecases.insertLevelUsecase(
        unitName: unitName,
        name: name,
        upLimit: upperLimit ?? 0,   // use default behaviour of 0 if null
...
        parentName: parentName,
      ));
    }


    if (sections.contains('Assemblage')) {
      final String name = inputs['Assemblage-Assemblage Name']!;
      final String unitName = inputs['Assemblage-Unit Name']!;
      final String levelName = inputs['Assemblage-Level Name']!;

      _logger?.info("Save - Inserting Assemblage");
      results.add(await usecases.insertAssemblageUsecase(name: name, unitName: unitName, levelName: levelName));
    }


    if (sections.contains('Artifact (Faunal)')) {
      final String assemblageName = inputs['Artifact (Faunal)-Assemblage Name']!;
      final int? porosity = int.tryParse(inputs['Artifact (Faunal)-Porosity'] ?? '');
      final double? sizeUpper = double.tryParse(inputs['Artifact (Faunal)-Size Upper'] ?? '');
      final double? sizeLower = double.tryParse(inputs['Artifact (Faunal)-Size Lower'] ?? '');
      final int? preExcavFrags = int.tryParse(inputs['Artifact (Faunal)-Pre Excavation Fragments'] ?? '');
      final int? postExcavFrags = int.tryParse(inputs['Artifact (Faunal)-Post Excavation Fragments'] ?? '');
      final int? elements = int.tryParse(inputs['Artifact (Faunal)-Elements'] ?? '');
      final String? comment = inputs['Artifact (Faunal)-Comment'];
      
      _logger?.info("Save - Inserting Faunal Artifact");
      results.add(await usecases.insertArtifactUsecase(assemblageName: assemblageName,
          porosity: porosity, sizeUpper: sizeUpper, sizeLower: sizeLower, comment: comment,
          preExcavFrags: preExcavFrags, postExcavFrags: postExcavFrags, elements: elements));
    }
...
