...
          }
          // Displays error if backend failed and in which forms
          if (state is SaveFailure) {
            ScaffoldMessenger.of(context).showSnackBar(
              SnackBar(
                content: 
                  Text("An error occured while saving",
                    style: TextStyle(
                      color: AppColors.mainText,
                    )),
                behavior: SnackBarBehavior.floating,
                backgroundColor: AppColors.danger,
                margin: EdgeInsets.only(top: 50, left: 16, right: 16),
...
          }
          // Display success message
          if (state is SaveSuccess) {
            ScaffoldMessenger.of(context).showSnackBar(
              SnackBar(
                content: 
                  Text("Save Successful",
                    style: TextStyle(
                      color: AppColors.mainText,
                  )),
                behavior: SnackBarBehavior.floating,
                backgroundColor: AppColors.primaryBlue,
                margin: EdgeInsets.only(top: 50, left: 16, right: 16),
...
                    mainAxisAlignment: MainAxisAlignment.start,

                    children: [
                      //"Save Button" for the Add data page
                      // Uses the "save" handler when clicked
                      TextButton(
                        key: Key("saveButton"),
                        // prevent repeated press if already processing a save
                        onPressed: state is SaveLoading ? null : () => _handleSave(context),
                        style: TextButton.styleFrom(
                          backgroundColor: AppColors.addDataFieldFocus,
                          foregroundColor: Colors.white,
                          padding: const EdgeInsets.symmetric(
...
                        child: const Text("Save"),
                      ),
                      //"Reset Button" for the Add Data Page
                      // Uses the "reset" handler when clicked
                      const SizedBox(width: 10),
                      TextButton(
                        key: Key("resetButton"),
                        // prevent reset during save
                        onPressed: state is SaveLoading ? null : () => _handleReset(context),
                        style: TextButton.styleFrom(
                          backgroundColor: Colors.white,
                          foregroundColor: AppColors.mainText,
                          padding: const EdgeInsets.symmetric(
...
